Fixed the navbar so that the font size dont get too big in fullscreen.

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body {
 
 .navbar>* {
   margin: 2vh 5vw 0vh 5vw;
-  font-size: 4vw;
+  font-size: 40px;
   color: #456F5F;
 }
 
@@ -38,6 +38,8 @@ div>ul {
 #divider {
   padding-left: 0.5em;
   padding-right: 0.5em;
+  font-size: 0.7em;
+  max-height: 20px;
 }
 
 
@@ -45,7 +47,7 @@ a {
   text-decoration: none;
   color: #456F5F;
   /*text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);*/
-  font-size: 3vw;
+  font-size: 35px;
   line-height: 18px;
 }
 
@@ -59,13 +61,18 @@ a:hover {
 
 @media screen and (max-width: 850px) {
   a {
-    font-size: 4vw;
+    font-size: 20px;
   }
 
 
   .navbar {
-    font-size: 4vw;
+    font-size: 3vw;
   }
+
+  .navbar>* {
+    font-size: 25px;
+  }
+
 }
 
 @media screen and (min-width:640px) and (-webkit-device-pixel-ratio: 3) {
